src/frontend/src/app/home-page/popups/profil/profil.component.css
/* Container */
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100%;
  color: white;
  font-size: 20px;

  background-color: blue;
}

/* Header */
.profil-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 90%;
  height: 180px;
  border-radius: 1em;
  background-color: #1A202C;
  padding: 20px;
  margin: 10px;
}

.profil-header-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: white;
  font-size: large;
  font-weight: 700;

  width: 30%;
  margin-right: 20px;
  margin-left: 20px;
}

.profil-header-avatar {
  border-radius: 100%;
  margin-top: 16px;
}

.profil-header-line {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  color: white;

}

/* Separator */
.profil-counter {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.profil-win-counter {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 20px;
  height: 32px;
  width: fit-content;
}

.profil-win-logo {
  color: green;
  margin-right: 10px;
  font-weight: bolder;
  font-size: 24px;
}

.profil-loss-logo {
  color: red;
  margin-left: 10px;
  font-weight: bolder;
  font-size: 24px;
}

